# wayland-ssh-askpass

./: .clang-format  meson.build
data/systemd-askpass/: meson.build  wayland-systemd-askpass.path  wayland-systemd-askpass.service.in
include/: model.h  model.hpp  window.h  window.hpp
include/common/: concepts.h  exit_codes.h  macros.h  unique_fd.h  window.h
include/ssh-askpass/: model.h
include/systemd-askpass/: model.h  systemd-askpass-context.h  window-model.h
src/: main.cpp  model.hpp  window.cpp
src/common/: window-wayland.cpp  window-x11.cpp  window.cpp
src/ssh-askpass/: main.cpp  model.cpp
src/systemd-askpass/: main.cpp  model.cpp  systemd-askpass-context.cpp  window-model.cpp
